--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -124,7 +124,7 @@ Importantly, this limits our ability to understand how warming temperatures will
 
 
 **Here we review biophysical and biological patterns across the vertical canopy gradient in forests, how these gradients affect leaf-level processes and, in turn, whole plant performance , and the implications for understanding forest ecosystem responses and feedbacks to climate change .**
-We structure the review around six major questions (Fig. `r fig_schematic`).
+We structure the review around five major questions (Fig. `r fig_schematic`).
 
 i.	How does the biophysical environment vary with height in forests?
 
@@ -136,7 +136,7 @@ iv.	How does leaf metabolism respond to [air or leaf?] temperature in canopy and
 
 v. What are the implications of vertical canopy gradient patterns for the ecological and climate change responses of canopy versus understory trees?
 
-vi.	What are the implications for modeling/ scaling / What are the implications of these leaf-scale responses at the ecosystem scale [in the context of climate change] / How do these leaf-level responses scale to entire ecosystems(*nerge these better*)
+We then consider the implications for modeling/ scaling /climate change responses. 
 
 *Our primary interest is the gradient in height and exposure from the top of the canopy to the understory in forests. However, because a lot of the relevant research has focused on exposure gradients near ground level (e.g., comparisons of sun and shade leaves), and the implications [or utility] for ecosystem models we also review studies focused on exposure gradients.*
 
@@ -182,7 +182,6 @@ Consistent with the results from NEON sites, higher wind speeds at greater heigh
 Greater upper canopy wind speeds result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with wind velocity [@daudetWindSpeedLeaf1999a]. *(mention boundary layer conductance here, but move the discussion of leaf temperature to the T_leaf section )* ~~Large $g_{a}$ to heat transfer, in turn, results in a smaller difference between $T_{air}$ and $T_{leaf}$, which is more typical of small leaves in the upper canopy, allowing them to dissipate heat more efficiently than larger leaves [@bauerleSeparatingFoliarPhysiology2011]. In low wind conditions, because $g_{a}$ to heat transfer is comparatively small, $T_{leaf}$ in the upper canopy can become substantially elevated in relation to $T_{air}$ under high radiation [@martin_boundary_1999; @leighInfluenceLeafSize2017]. Additionally, the thickness of the air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; @stokesBoundaryLayerConductance2006] this tends to be greater in the understory than canopy? [ref] ~~ 
 
 
-
 ### Air temperature 
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [@defrenneGlobalBufferingTemperatures2019], and recent evidence shows a similar trend across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012a] and in the northwestern United States [@davis_microclimatic_2019]. Intact tropical forests have also been show to exhibit lower peak daytime $T_{air}$ than neighboring tree crop agricultural plantations (S. R. Hardwick et al., The relationship between leaf area index and microclimate in tropical forest and oil palm plantation: Forest disturbance drives changes in microclimate. Agric. Meteorol. 201, 187–195 (2015)). Even though canopy cover buffers maximum air temperatures in the understory, inevitable increases in understory temperatures continue to be observed as a result of global temperature increases. However, the buffering by canopy cover smooths this warming in the understory, thereby exhibiting an understory temperature lag [@bertrandCommentForestMicroclimate2020; @zellwegerResponseCommentForest2020;@rollinsonClimateSensitivityUnderstory]
@@ -211,19 +210,11 @@ RH, in combination with temperature, determines vapor pressure deficit, $VPD$. A
 This means that canopy leaves tend to be exposed to higher *evaporative demand*, higher stomatal constraints [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]. In northeastern US mesic temperate forests, tree-ring analyis [__time-scale] showed that the upper canopy was observed to be more sensitive to $VPD$, whereas the understory was insensitive [@rollinsonClimateSensitivityUnderstory, 2020]
 
 ### Carbon dioxide
-**Carbon dioxide (CO~2~) concentrations tend to be higher in the understory, primarily at night.** 
-	Higher in the understory, particularly at dusk [@koike_leaf_2001]. Higher in the understory overnight; difference persists during the day but is very small [@yang_spatial_1999]. Differences in concentration are by far most pronounced near ground level, as well, concentrations of (CO~2~) mole fraction values have been observed to be higher in lower canopy leaves compared with upper canopy leaves [because of lower photosynthetic rate in shade leaves?] [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]
+
+**Atmopsheric carbon dioxide (CO~2~) concentrations tend to be higher near ground level at night, but largely dissipate during the day [@koike_leaf_2001; @yang_spatial_1999].** 
+~~concentrations of (CO~2~) mole fraction values have been observed to be higher in lower canopy leaves compared with upper canopy leaves [because of lower photosynthetic rate in shade leaves?] [@niinemetsPhotosyntheticAcclimationSimultaneous2004b]~~ *(KAT: I'm confused by this. We want to discuss just atmospheric CO2 here, so I think this doesn't fit)*
 Given that differences are small during the day when photosynthesis is occurring, and that even nighttime differences are modest at the height of understory tree crowns, CO~2~ concentrations are unlikely to have much of an effect on the energy balance and metabolism of leaves across the forest vertical gradient.
-If soil and stem respiration do not acclimate fully to rising temperatures, the greater amount of CO~2~ emitted at the forest floor (i.e. from soils and decaying organic matter and leaf litter) could increase the vertical CO~2~ gradient in the future, but this would still only be a short-term effect in the early morning, as the CO~2~ would quickly diffuse through the canopy. 
-~~Furthermore, increases in mortality of big trees (e.g. @senfCanopyMortalityHas2018a) would increase canopy roughness and prevent build-up of CO~2~ concentration gradients.~~ (*but make the point about big tree mort elsewhere*)
-
-(*keep discussion of CO2 to what's in the paragraph above. Definitely don't want to go beyond a brief mention of warming effects on soil respiration*): (Elsa: see these papers on the long-term Harvard Forest soil warming experiments. CO2 emissions increased, then decreased, then increased again. It's thought that the changes in soil CO2 emissions over time were linked to turnover in microbial community composition.
-- DeAngelis, K.M., Pold, G., Topçuoğlu, B.D., van Diepen, L.T., Varney, R.M., Blanchard, J.L., Melillo, J. and Frey, S.D., 2015. Long-term forest soil warming alters microbial communities in temperate forest soils. Frontiers in microbiology, 6, p.104.
-- Melillo, J.M., Steudler, P.A., Aber, J.D., Newkirk, K., Lux, H., Bowles, F.P., Catricala, C., Magill, A., Ahrens, T. and Morrisseau, S., 2002. Soil warming and carbon-cycle feedbacks to the climate system. Science, 298(5601), pp.2173-2176.
-- Melillo, J.M., Frey, S.D., DeAngelis, K.M., Werner, W.J., Bernard, M.J., Bowles, F.P., Pold, G., Knorr, M.A. and Grandy, A.S., 2017. Long-term pattern and magnitude of soil carbon feedback to the climate system in a warming world. Science, 358(6359), pp.101-105.) 
-- Nottingham, A.T., Meir, P., Velasquez, E. and Turner, B.L., 2020. Soil carbon loss by experimental warming in a tropical forest. Nature, 584(7820), pp.234-237.
-
-
+~~If soil and stem respiration do not acclimate fully to rising temperatures, the greater amount of CO~2~ emitted at the forest floor (i.e. from soils and decaying organic matter and leaf litter) could increase the vertical CO~2~ gradient in the future, but this would still only be a short-term effect in the early morning, as the CO~2~ would quickly diffuse through the canopy.~~ *(this last sentence could be cut for space)*
 
 
 *ALL OF THE FOLLOWING CONTENT SHOULD BE WORKED INTO RELEVANT PARAGRAPHS EARLIER IN THIS SECTION:*
@@ -518,12 +509,11 @@ Still, partitioning ET into its constituent components, let alone vertically par
 [Elsa: do we want a section about research opportunities using remote sensing or is that outside the scope of this review?] 
 An increasing availability of airborne and spaceborne LiDAR remote sensing data offers a promising opportunity for mapping vertical thermal gradients and vegetation structure. [Drone based FLIR cams, tower thermal cams (Pau et al 2018), ECOSTRESS]. To evaluate large-scale ecosystem patterns, high resolution vertically resolved vegetation structure from LiDAR data can be analyzed in combination with collocated field measurements collected using towers (FluxNet REF), canopy cranes (@nakamuraForestsTheirCanopies2017), or by tree climbing (REF – e.g. Asner papers, Shenkin et al – Unding Jami’s work). Existing research efforts have already revealed incredibly heterogeneity in vegetation structure, diversity, traits, and properties both within and across ecosystems (REFS – Stovall, Schneider, …others).
 
-## Implications for Modeling and projecting climate change responses 
- 
+## Implications 
+
+*(In this section, we consider implications of the patterns reviewed above for our understanding of the future of forests--both how we model them and what sorts of responses we can expect under climate change.)*
 
 ### Representing Vertical Gradients in Models
-
-*(@Nidhi & @Krista, feel free to edit/remove any of the above text. I'm adding more text than we'll want in the end, but I want to air on the side of more rather than less so that you can make decisions about what content you think best fits the goal of this review. At some point, perhaps we should discuss this section further and I can revise based on that.) *
 
 Models representing ecosystem dynamics related to carbon, energy, and water fluxes operate at a range of scales and have varying degrees of complexity , and include offline models and models that can be fully coupled with Earth System Models (ESMs). Dynamic global vegetation models (DGVMs) comprise the land surface models in ESMs used to predict the global distribution of vegetation types and biosphere-atmosphere feedbacks (Cao & Woodward, 1998; Foley et al., 1996; Sitch et al., 2003; Woodward & Lomas, 2004). Improved representation of vegetation demographic processes in ESMs, specifically including forest canopy architectural variation in both horizontal and vertical directions, has repeatedly been identified as a critical step toward reduced uncertainty  and more accurate characterization of biologically mediated feedbacks (Banerjee & Linn 2018, Evans, 2012; Moorcroft, 2006; Moorcroft, Hurtt, & Pacala, 2001; Purves & Pacala, 2008; Thomas, Brookshire, & Gerber, 2015). Still, as models increase in complexity, model developments and improvements have direct tradeoffs with increased computational cost and potentially decreased interpretability of model output. 
 
@@ -539,7 +529,7 @@ Because most CBMs are spatially implicit within grid cells, direct and diffuse p
 
 
 
-### Implications for climate change responses
+### Climate change responses
 
 - Influence of increasing temperatures on species compositions and feedbacks to future forest microclimates and function?
 
@@ -550,6 +540,8 @@ Because most CBMs are spatially implicit within grid cells, direct and diffuse p
 *While forest microclimates are insulated from macroclimatic extremes, they are still subjected to warming trends [@bertrandCommentForestMicroclimate2020]. Understories experience a distinct set of pressures as microclimatic warming combines with conditions of limited light and related foliar traits, inter-species resource competition, and herbivory [@niinemetsResponsesForestTrees2010a; @bartholomewSmallTropicalForest2020]. Since temperature sensitivity is directly linked with plant metabolic processes and performance, even around 1 degree of warming can lead to changes in plant species composition and growth [@bertrandChangesPlantCommunity2011; @bertrandCommentForestMicroclimate2020]. Plant communities in forest microclimates are already undergoing thermophilization [@duqueThermophilizationAdultJuvenile2015a; @zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013]. Tree-ring analysis in mesic temperate forests shows reduced growth of understory trees relative to overstory with warming temperatures [@rollinsonClimateSensitivityUnderstory, 2020]. In addition, understory growth phenology is more sensitive to warming than canopy-- showing earlier spring onset and later autumn senescense [@zohnerOngoingSeasonallyUneven2019].*
 
 *The capacity of buffering largely depends on canopy cover and water availability [@davis_microclimatic_2019], each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions [@senfCanopyMortalityHas2018a]. Increasing global temperatures can increase canopy leaf temperatures sometimes above ambient temperature when transpiration is low, leading to temperate and tropical forest canopies functioning beyond or close to their optimal photosynthetic threshold [@mau_temperate_2018; @huangAirTemperatureOptima2019]. In wetter conditions, available water facilitates leaf transpiration through open stomata; however increased relative humidity in tropical regions indirectly caused by increased temperature reduces transpiration, leading to high leaf temperatures in the canopy [@tibbittsHumidityPlants1979; @perezIncreasingHumidityThreatens2018].*
+
+increases in mortality of big trees (e.g. @senfCanopyMortalityHas2018a) would increase canopy roughness 
 
 ## Conclusions
 
